added disease prediction endpoint
